WD-8858 - fix: fix notifications overlapping top navigation bar (#1713)

--- a/src/scss/_vanilla-overrides.scss
+++ b/src/scss/_vanilla-overrides.scss
@@ -29,9 +29,9 @@
   }
 }
 
-// Fix for bug: https://github.com/canonical/vanilla-framework/issues/4907.
+// Fix for bug: https://github.com/canonical/vanilla-framework/issues/4990.
 .p-panel__header.is-sticky {
-  background-color: $color-x-light;
+  z-index: z("zeta");
 }
 
 // Make the skip link visible over the side nav
